--- a/gb/13/6/11/n3891705.md
+++ b/gb/13/6/11/n3891705.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fulfvx3112/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fulfvx3112/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fulfvx3112/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fulfvx3112/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fulfvx3112/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台国研院建资料库  助产学衔接</h2>
 
 <h6></h6>
 <hr>
 <p>【大纪元6月11日报导】（中央社记者林孟汝台北11日电）国研院院长陈良基今天表示，台湾学术及专利数量世界名列前茅，但产业利润却无法提升，IPCI以具体科学数字联结学术研究，提供产业正确方向及可行性。</p>
-<p>国家实验研究院科技政策研究与资讯中心今天举行“台湾学术能量提升与转化”记者会，宣告建立全世界第一套可评估学术能量的产业应用潜力<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E8%B5%84%E6%96%99%E5%BA%93.md#1">资料库</a>(Intellectual Property Citation Index，IPCI)。</p>
+<p>国家实验研究院科技政策研究与资讯中心今天举行“台湾学术能量提升与转化”记者会，宣告建立全世界第一套可评估学术能量的产业应用潜力<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B5%84%E6%96%99%E5%BA%93.md#1">资料库</a>(Intellectual Property Citation Index，IPCI)。</p>
 <p>IPCI含括美国专利自1976年至2012年核准资料与1986年至2012年的科学论文资料，作为探讨产业与学术连结运用影响评估。</p>
 <p>国研院统计至2012年止，台湾科学论文发表量世界第16、美国专利核准量世界第5；同时，台湾学术研究对国内、外产业影响均逐年增加，从各主要国家学术论文被专利引用比例排名来看，台湾2003至2007年排名15、2008至2012年排名16，在国际上逐渐占有一席之地。</p>
 <p>陈良基说，如何将这些质量俱佳的学术研究，转化为产业“有牙齿专利”，提升台湾竞争力，不能凭直觉乱投资研发，而是应列举科学证据。</p>
 <p>不过，从IPCI资料显示，台湾产业最主要使用美国、日本、台湾、英国及德国的科学研发成果；但台湾学术成果却外流到美国、日本居多。</p>
 <p>陈良基认为，学用落差现象应与台湾产业以往多以代工为主，使用多是国外已成熟的技术有关；但如果是创新导向的领导厂商如台积电、旺宏，落差就会缩短。</p>
-<p>另外，科技政策研究与资讯中心副研究员詹德译表示，由IPCI<ahref="https://github.com/fulfvx3112/djy/blob/master/gb/tag/%E8%B5%84%E6%96%99%E5%BA%93.md#1">资料库</a>中除可观察新兴技术萌芽的起源及发展，也可以藉由被引用的论文所衍生的国外专利范围、种类，提供产、学界合作的正确发展方向。</p>
+<p>另外，科技政策研究与资讯中心副研究员詹德译表示，由IPCI<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B5%84%E6%96%99%E5%BA%93.md#1">资料库</a>中除可观察新兴技术萌芽的起源及发展，也可以藉由被引用的论文所衍生的国外专利范围、种类，提供产、学界合作的正确发展方向。</p>
 <p>他举例，如台湾生物学者相关的论文，在被工程等其他领域引用，并因此被国外知名公司申请专利，台湾产业界就可在资料库中查知，并和该学者合作，研究相关创新。</p>
 <p>詹德译说，IPCI第二阶段将纳入欧洲、日本、中国大陆的论文及专利资料，让资料库更加完备后，再开放给学界使用；至于台湾的相关资料，他说，因台湾不是使用英文作为主要语言，考虑在第三阶段排除障碍后纳入。</p>
 
@@ -20,48 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/12/3/28/n3553030.md#1">台食品营养资料库 试用版今上路</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/12/8/29/n3670755.md#1">宜兰人文数位资料库  使用人次已破10万</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/12/10/3/n3697581.md#1">心因性猝死增 台医界促建资料库</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/12/11/9/n3725636.md#1">资料库监测 助企业因应个资法</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/1/24/n3784750.md#1">DNA成资料库 欧研究大突破</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/4/29/n3858081.md#1">协助创新创业  台北科大任区域平台</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/5/6/n3863499.md#1">无障碍餐厅  残盟建南市资料库</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/5/6/n3863808.md#1">精进产学合作  中科补助厂商</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/5/7/n3864646.md#1">倍特利公司 中央大学产学合作</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/5/16/n3872880.md#1">产学合作签约   南开推海外实习</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/3/28/n3553030.md#1">台食品营养资料库 试用版今上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/8/29/n3670755.md#1">宜兰人文数位资料库  使用人次已破10万</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/10/3/n3697581.md#1">心因性猝死增 台医界促建资料库</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/12/11/9/n3725636.md#1">资料库监测 助企业因应个资法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/24/n3784750.md#1">DNA成资料库 欧研究大突破</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/4/29/n3858081.md#1">协助创新创业  台北科大任区域平台</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/6/n3863499.md#1">无障碍餐厅  残盟建南市资料库</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/6/n3863808.md#1">精进产学合作  中科补助厂商</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/7/n3864646.md#1">倍特利公司 中央大学产学合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/16/n3872880.md#1">产学合作签约   南开推海外实习</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/10/n10773796.md#1" target="_blank">邪恶帝国——里根总统谴责苏联共产政权</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/10/3/n12449907.md#1">《圣经》与《推背图》预言的应验与变换12</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12665193.md#1">超逼真写实油画 描绘生活中的小小珍宝</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/27/n12647950.md#1">偶然的天意？康熙时钱币的预示</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/5/n12667639.md#1">猪有前世记忆：投人身长猪蹄 轮回中还业</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12679813.md#1">【珍言真语】许丽明：不惧抓捕 港人坚守信念</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676676.md#1">【有冇搞错】如何度过黑暗时代</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12680392.md#1">【珍言真语】钟剑华：滥捕只让人更鄙视港府</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676021.md#1">【更新】苹果谷歌下架Parler应用程序</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678054.md#1">“我们都是川普”网民换头像斥推特封杀川普</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678083.md#1">【重磅】蓬佩奥：解除美台交往限制</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676634.md#1">刘嘉玲自曝有洁癖 拍戏时曾换掉酒店房间马桶</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12676343.md#1">身形暴瘦传患大病 张家辉停工一年首露面</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679612.md#1">女儿想要个妹妹 张梓琳反问“是弟弟咋办”</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12679436.md#1">张檬晒素颜证件照 告诫后来人不要整容</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678338.md#1">黄秋生不爱火锅 评论“像厨余”吓坏KID</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677405.md#1">波兰房屋起火 “守护天使”盘旋空中</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/10/n12678623.md#1">英媒：英军特种部队受训 抵抗外星人入侵</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12678002.md#1">病毒带来可怕精神疾病？精神科医师析4大原因</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/8/n12674814.md#1">【重播】全球确诊速升 除了口罩疫苗 自保这样做</a></li>
-<li><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/4/n12666916.md#1">【线上活动】男人如何守护前列腺？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/6/11/n3891705.htm">台国研院建资料库  助产学衔接</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/6/11/n3891705.htm">台国研院建资料库  助产学衔接</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fulfvx3112/djy/blob/master/gb/13/6/11/n3891705.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fulfvx3112/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fulfvx3112/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fulfvx3112/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/13/6/11/n3891705.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
